[package]
name = "cellular"
version = "0.1.0"
authors = ["Zotho <svjatoslavalekseef2@gmail.com>"]
edition = "2018"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
macroquad = { git="https://github.com/not-fl3/macroquad", rev = "32bb775" }
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive"] }
clap = "3.0.0-beta.2"